# PDF_Extract_OCR

./: .gitignore  app.py  logger.py  main.js  main.py  ocr_organizer.py  pyproject.toml  run.sh  streamlit_app.py  template.html  test4_organized_data.json
ocr/Scripts/: activate  activate.bat
